plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    repositories {
        mavenCentral()
    }

    group = 'com.breaditnow'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    // check-style
    apply plugin: 'checkstyle'

    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'

    checkstyle {
        maxWarnings = 0
        configFile = file("${rootDir}/config/naver-checkstyle-rules.xml")
        configProperties = ["suppressionFile": "${rootDir}/config/naver-checkstyle-suppressions.xml"]
        toolVersion = "10.12.1"
    }

    // === checkstyle 끄기 ===
    tasks.withType(Checkstyle).configureEach {
        enabled = false
    }

}

subprojects {
    apply plugin: "java"

    // build.gradle에서 api()를 사용하려면 java-library 사용
    apply plugin: 'java-library'
    apply plugin: "io.spring.dependency-management"

    // spring boot dependency를 사용하여 사용중인 부트 버전에서 자동으로 의존성을 가져온다.
    apply plugin: "org.springframework.boot"

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'

        developmentOnly 'org.springframework.boot:spring-boot-devtools'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        testImplementation platform('org.junit:junit-bom:5.9.1')
        testImplementation 'org.junit.jupiter:junit-jupiter'
    }
}

// === [자동화 빌드 Task 추가] ===

task cleanAll {
    dependsOn ':breaditnow-gateway:clean', ':breaditnow-auth-api:clean',
            ':breaditnow-customer-api:clean', ':breaditnow-owner-api:clean',
            ':breaditnow-external:clean', ':breaditnow-common:clean',
            ':breaditnow-domain:clean', ':breaditnow-redis:clean'
}

// 공통 모듈 build
task buildCommons {
    dependsOn ':breaditnow-external:build', ':breaditnow-common:build',
            ':breaditnow-domain:build', ':breaditnow-redis:build'
}

// 전체 서비스 bootJar 빌드
task buildAll {
    dependsOn cleanAll
    dependsOn buildCommons
    dependsOn ':breaditnow-gateway:bootJar', ':breaditnow-auth-api:bootJar',
            ':breaditnow-customer-api:bootJar', ':breaditnow-owner-api:bootJar'
}
